Add Branch Content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Hello HTML in Git</title>
+		<meta name="description" content="Hello HTML in Git"/>
 	</head>
 	<body>
 		<h1>Hello HTML~~!!~!</h1>
